# rapiti

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  biome.json  index.html  jest.config.mjs  package.json  styles.css  tsconfig.json  vite.config.js
.beads/: issues.jsonl  metadata.json
.opencode/plans/: ripittura-citta-mini-mappa.md
docs/: storyline.md
scripts/: convert-to-es6.cjs  generate-icon.cjs
src/: bridge.ts  config.js  config.mjs  config.ts  data.js  game.js  global.d.ts  main.js  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/areas/: archivio.mjs  barExterior.js  barExterior.mjs  barInterno.mjs  campo.mjs  cascina.mjs  cascina_interno.mjs  chiesa.js  chiesa.mjs  cimitero.js  cimitero.mjs  fienile.mjs  giardini.js  giardini.mjs  index.js  index.mjs  industriale.js  industriale.mjs  monte_ferro.mjs  municipio.mjs  piazze.js  piazze.mjs  polizia.js  polizia.mjs  residenziale.js  residenziale.mjs
src/data/: areas.js  areas.mjs  (+10 more)
tests/: area-structure.test.mjs  classes.test.mjs  config.test.mjs  data-integrity.test.mjs  dialogue-nodes.test.mjs  dialogue.test.mjs  endings.test.mjs  engine.test.mjs  i18n-coverage.test.ts  i18n.test.mjs  input.test.mjs  main.test.mjs  mapEditor.test.ts  movement.test.mjs  pixi.test.mjs  puzzle-coverage.test.ts  puzzles.test.mjs  quests.test.mjs  regression.test.ts  renderer.test.mjs  scene-puzzle.test.mjs  setup.mjs  spawn-safety.test.ts  store.test.mjs  story.test.mjs  storyline-continuity.test.mjs  tauri-migration.test.mjs  transitions.test.mjs
(+144 files in other folders)
